Fixes some layout issues with the end-date rendering and changes talk to "Vortrag". Closes #34

--- a/pyconde/static_media/css/_header.less
+++ b/pyconde/static_media/css/_header.less
@@ -106,11 +106,11 @@
     .description {
         color: #3E3E3E;
         margin: 0 0 0 87px;
-        padding: 7px 20px 23px 10px;
+        padding: 7px 0px 23px 10px;
         height: 41px;
         display: table;
         line-height: 140%;
-        width: 203px;
+        width: 223px;
         font-size: 13px;
         .ie7 & {
             padding-top: 16px;        
@@ -137,7 +137,7 @@
             }
         }
         .description {
-            width: 173px;
+            width: 293px;
             padding-left: 0;
         }
     }
